--- a/ref.bib
+++ b/ref.bib
@@ -9,7 +9,7 @@
   publisher = {Elsevier}
 }
 
-@inproceedings{he2016deep,
+@inproceedings{resnet,
   title     = {Deep residual learning for image recognition},
   author    = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
   booktitle = {Proceedings of the IEEE conference on computer vision and pattern recognition},
